# zern

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml
src/zernlp/: tokenizer.py  tokenizers.py
